--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,10 @@ td { vertical-align: top; }
    Author: Horia Dragomir <horia@hdragomir.com>
    ========================================================================== */
 
+body.fatty{ min-height: 500em; }
+
+body{-webkit-transition: all .5s .5s;}
+
 header{
     width: 95%;
     margin: 0 2.5%;
@@ -220,7 +224,7 @@ header{
     }
     
         form input{
-            border-radius: 3%;
+            border-radius: .3em;
             border: 1px solid #aaa;
             width: 91.9%;
             font-size: 1.3em;
